# CyberArmorAi

./: .gitignore  AI-IDENTITY-CONTROL-PLANE.md  AI-Identity-Control plane.docx  AI_Protect_V3-main-ai-protect-system-fixed-2026-03-03-v3-9.sln  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Jenkinsfile.security  LICENSE  Makefile  README.md  SECURITY.md  updateAgent.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_hardening.md
admin-dashboard/: app.js  auth-unavailable.html  index.html  login.html
agents/endpoint-agent/: Dockerfile  README.md  agent.py  clipboard_helper.py  cyberarmor-clipboard-helper  install_clipboard_helper.sh  installer.py  policy_enforcer.py  requirements.txt  uninstall_clipboard_helper.sh
agents/proxy-agent/: Dockerfile  main.py
agents/ros-agent/: Dockerfile  actuator_policy.py  cyberarmor_ros_node.py  dds_inspector.py  launch_guard.py  package.xml  sensor_integrity.py  service_guard.py  setup.py  topic_monitor.py
cli/: cyberarmor_cli.py  pyproject.toml
clients/demo-client/: Dockerfile  demo_client.py
clients/demo-web/: Dockerfile  main.py
customer-portal/: app.js  auth-unavailable.html  index.html  login.html
data/prompt_injection/: seed_prompt_injection_v1.jsonl
docker/pqc-base/: Dockerfile
docs/: azure-app-registration.md  branding-compatibility-migration.md  branding-hard-rename-breaking-changes-2026-03-12.md  v1-readiness-plan.md
docs-site/: .dockerignore  Dockerfile  mkdocs.yml
docs-site/docs/: index.md
docs/aisr/: README.md
docs/api/: openapi.yaml
docs/architecture/: a-bom-design.md  bootstrap-credential-flow.md  capability-status.md  client-bootstrap-setup.md  openbao-cyberarmor-secrets-service.md  pitch_narrative.md  platform.md  url-trust-gate.md
docs/deployment/: hetzner-demo-and-marketing.md  hetzner-demo-first-boot-checklist.md  hetzner-first-server-checklist.md  hetzner-ubuntu-vm.md
docs/marketing/: stripe-fulfillment.md
docs/reports/: dashboard-behavioral-acceptance-report-2026-03-09.md  dashboard-integration-smoke-report-2026-03-08.md  pdp-latency-report-2026-03-08.md  phase2-deliverables-status-2026-03-08.md  phase2-gap-audit-report-2026-03-09-final.md  phase2-gap-audit-report-2026-03-09.md  phase2-line-by-line-checklist-2026-03-08.md  phase2-line-by-line-checklist-2026-03-09-final.md  sdk-framework-parity-matrix-2026-03-08.md  security-hardening-status-2026-03-09.md
docs/runbooks/: agent-onboarding-policy-assignment-demo.md  audit-signing-key-rotation-and-retention-lock.md  demo-pack-8-scenarios.md  integration-onboarding-policy-gated-runbook.md  live-demo-script.md  mfa-operations-runbook.md  mtls-certificate-rotation-runbook.md  prompt-injection-transformer-rollout.md  proxy-controls-redact-block-demo.md  rotation-iam-live-validation-runbook.md  secret-manager-rotation-approval-runbook.md
docs/security/: jenkins-security-pipeline.md  pqc-auth-rollout.md
docs/trustops-launch/: intake-form.md  landing-page.html  pilot-proposal.md  questionnaire-answer-template.csv  questionnaire-answer-template.md
extensions/: README.md
extensions/chromium-shared/: README.md  ai_monitor.js  background.js  build-pqc.mjs  content.js  manifest.json  options.html  options.js  package-lock.json  package.json  phishing_warning.html  phishing_warning.js  policy_engine.js  popup.html  popup.js  styles.css  upload_interceptor.js  url_trust_gate.js
extensions/cursor/: README.md  package.json
extensions/edge/: manifest.json
extensions/firefox/: README.md  background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js  pqc_auth.js
extensions/kiro/: README.md  package.json  tsconfig.json
extensions/office365/: README.md  manifest.xml  package.json  webpack.config.js
extensions/safari/: Info.plist  README.md  background.js  content.js  manifest.json
extensions/visual-studio/: CyberArmorExtension.cs  CyberArmorExtension.csproj
extensions/vscode/: README.md  package-lock.json  package.json  tsconfig.json
infra/envoy/: Dockerfile  (+1 more)
marketing/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  proxy.ts  tailwind.config.ts
mobile/: App.tsx  package.json  tsconfig.json
rasp/: README.md
rasp/c_cpp/: CMakeLists.txt  README.md
rasp/c_cpp/include/: cyberarmor_rasp.h
rasp/c_cpp/src/: cyberarmor_rasp.c
rasp/rust/: Cargo.toml  README.md
rasp/rust/src/: lib.rs
scripts/: benchmark_policy_latency.py  check_openapi_drift.py  dashboard-api-contract.sh  dashboard-behavioral-acceptance.sh  dashboard-integration-smoke.sh  phase2_gap_audit.py  public-surface-link-check.sh  smoke-test.sh
sdks/: README.md
sdks/c_cpp/: CMakeLists.txt  cyberarmor.pc.in
sdks/c_cpp/include/cyberarmor/: cyberarmor.h
sdks/c_cpp/src/: cyberarmor.c
sdks/python/: README.md  pyproject.toml
sdks/python/cyberarmor/: __init__.py  client.py  config.py
sdks/python/cyberarmor/audit/: __init__.py  emitter.py  signer.py
sdks/python/cyberarmor/detection/: __init__.py  prompt_injection.py
sdks/python/cyberarmor/dlp/: __init__.py  scanner.py
sdks/python/cyberarmor/frameworks/: __init__.py  anthropic_url_trust_gate.py  langchain.py  langchain_url_trust_gate.py  llamaindex.py  openai_url_trust_gate.py  vercel_ai.py
sdks/python/cyberarmor/identity/: __init__.py  agent.py  delegation.py  token.py
sdks/python/cyberarmor/middleware/: __init__.py  django.py  fastapi.py  flask.py
sdks/python/cyberarmor/policy/: __init__.py  decisions.py  enforcer.py
sdks/python/cyberarmor/providers/: __init__.py  amazon.py  anthropic.py  base.py  google.py  meta.py  microsoft.py  openai.py  perplexity.py  xai.py
sdks/python/tests/: test_anthropic_url_trust_gate.py  test_openai_url_trust_gate.py
sdks/rust/: Cargo.toml
sdks/rust/src/: audit.rs  client.rs  config.rs  error.rs  lib.rs  policy.rs
sdks/rust/src/providers/: amazon.rs  anthropic.rs  google.rs  meta.rs  microsoft.rs  mod.rs  openai.rs  openai_compatible.rs  perplexity.rs  xai.rs
sdks/rust/tests/: providers_parity.rs
shared/: edit-modals.js  list-view.js  policy-builder.js
(+606 files in other folders)
